# fiscalPDF

./: .gitignore  Pipfile  README.md  app.py  build.ps1  build.sh  config.py  error.py  pdf.py  pyproject.toml  pytest.ini  requirements.txt  wine-build.sh
src/: config.py  main.py
src/api/: error.py  pdf.py
src/core/: file_service.py  logger.py  pdf_service.py
src/desktop/: app.py
src/web/: app.py
src/web/templates/: home.html
test/: test_pdf.py
